* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies

*Jargon supports iRODS 2.5 through iRODS 3.2

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

==Features==

 *[#132] GSS and Kerberos Support in Jargon-core
 ** merge in plug-able authentication refactoring
 
 *[#870] jargon support for PAM

 ** Support for PAM authentication (per Chris Smith's updates to iRODS) as a pluggable auth module in Jargon
 ** [#992] don't let public irods account trigger auth other then standard
 
 *[#974] anonymous link support
 ** added isUserHasPermission methods for collections and data objects that indicate that a user has at least read permission on a file or data object
 ** added AnonymousAccessService in data utils to help manage permissions for the anonymous user
 
 *[#1011] add a dedicated doAuthentication method ot irodsAccessObjectFactory
 
 *[#922] User Profile Management
 ** support for a user profile service to maintain public and protected profile information for users in the user home directory.  Suitable for user profiles and configuration for applications built on iRODS.  This is
 used in the iDrop suite.
 
 *[#1023] add Version class in jargon-core
 ** Add support in the pom.xml file to generate a JargonVersion to org.irods.jargon.core.utils.  This is updated with the current build number.
 