@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.2.1-SNAPSHOT";
- public static String BUILD_TIME="20121012-1052";
+ public static String BUILD_TIME="20121030-1215";
 }
