@@ -11,8 +11,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.webmvc.version>3.0.5.RELEASE</spring.webmvc.version>
-		<hibernate.version>3.3.1.GA</hibernate.version>
-		<globus.version>2.0.4</globus.version>
 		<spring.core.version>3.1.0.RELEASE</spring.core.version>
 		<hibernate.version>3.3.2.GA</hibernate.version>
 	</properties>
@@ -161,18 +159,6 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-					<groupId>org.jglobus</groupId>
-					<artifactId>JGlobus-Core</artifactId>
-					<version>${globus.version}</version>
-					
-					 <exclusions>
-	     				<exclusion>
-					       <groupId>org.springframework</groupId>
-					       <artifactId>spring-core</artifactId>
-					     </exclusion>
-	   				</exclusions>
-				</dependency>
-			<dependency>
 				<groupId>antlr</groupId>
 				<artifactId>antlr</artifactId>
 				<version>2.7.7</version>
@@ -220,7 +206,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
-				<version>3.2.0.ga</version>
+				<version>3.2.1.ga</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.persistence</groupId>
